--- a/services/src/test-library/pom.xml
+++ b/services/src/test-library/pom.xml
@@ -154,6 +154,12 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openkilda</groupId>
+            <artifactId>grpc-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
