--- a/confd/vars/main.yaml
+++ b/confd/vars/main.yaml
@@ -126,3 +126,6 @@ kilda_grpc_endpoint: "http://grpc-speaker.pendev"
 kilda_grpc_rest_port: "8091"
 kilda_grpc_username: "kilda"
 kilda_grpc_password: "kilda"
+kilda_grpc_remote_log_server_ip: "1.1.1.1"
+kilda_grpc_remote_log_server_port: 321
+
